--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -26,23 +26,21 @@
         <SeekBar
             android:id="@+id/leftWheelSpeed"
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="400dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:rotation="270"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <SeekBar
             android:id="@+id/rightWheelSpeed"
             android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="400dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:rotation="270"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/leftWheelSpeed" />
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </layout>
