--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,14 @@
     tools:context=".MainActivity">
 
     <data>
-        <variable name="controllerModel" type="com.vincentzhang.robotcontrol.model.ControllerModel"></variable>
+
+        <variable
+            name="controllerModel"
+            type="com.vincentzhang.robotcontrol.model.ControllerModel"></variable>
+
+        <variable
+            name="seekBarEventHandler"
+            type="com.vincentzhang.robotcontrol.model.SeekBarHandler" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -25,23 +32,27 @@
 
         <SeekBar
             android:id="@+id/leftWheelSpeed"
-            android:layout_width="250dp"
-            android:layout_height="400dp"
+            android:layout_width="185dp"
+            android:layout_height="218dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            android:rotation="270"
+            android:max="200"
+            android:min="0"
             android:progress="@={controllerModel.leftSpeed}"
+            android:rotation="270"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <SeekBar
             android:id="@+id/rightWheelSpeed"
-            android:layout_width="250dp"
-            android:layout_height="400dp"
+            android:layout_width="185dp"
+            android:layout_height="218dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:rotation="270"
+            android:max="200"
+            android:min="0"
             android:progress="@={controllerModel.rightSpeed}"
+            android:rotation="270"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,9 +63,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:ems="10"
             android:labelFor="@id/leftWheelSpeed"
-            android:text="@{@string/leftwheelspeedformat(controllerModel.leftSpeed)}"
+            android:text="@{@string/leftwheelspeedformat(controllerModel.leftSpeed - 100)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftWheelSpeed" />
 
@@ -65,9 +75,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:ems="10"
             android:labelFor="@id/rightWheelSpeed"
-            android:text="@{@string/rightwheelspeedformat(controllerModel.rightSpeed)}"
+            android:text="@{@string/rightwheelspeedformat(controllerModel.rightSpeed - 100)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rightWheelSpeed" />
     </android.support.constraint.ConstraintLayout>
