--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -79,5 +79,16 @@
             android:text="@{@string/rightwheelspeedformat(controllerModel.rightSpeed - 100)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rightWheelSpeed" />
+
+        <com.vincentzhang.robotcontrol.IKView2D
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="#FF0000"
+            app:layout_constraintEnd_toStartOf="@+id/rightWheelSpeed"
+            app:layout_constraintStart_toEndOf="@+id/leftWheelSpeed"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </layout>
