--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rightWheelSpeed" />
 
-        <com.vincentzhang.robotcontrol.IKView2D
+        <com.vincentzhang.robotcontrol.view.IKView2D
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginStart="8dp"
