--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -109,16 +109,29 @@
             app:srcCompat="@android:drawable/button_onoff_indicator_off" />
 
         <SeekBar
-            android:id="@+id/seekBar"
+            android:id="@+id/clampAngle"
             android:layout_width="164dp"
             android:layout_height="49dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:progress="@={controllerModel.clampAngle}"
+            android:max = "50"
+            android:min = "10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftWheelSpeed"
             app:layout_constraintVertical_bias="0.3" />
+
+        <TextView
+            android:id="@+id/clampAngleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/clampAngle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clampAngle" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
