Added platform angle control

--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
             android:id="@+id/leftWheelSpeed"
             android:layout_width="185dp"
             android:layout_height="218dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:max="200"
             android:min="0"
             android:progress="@={controllerModel.leftSpeed}"
@@ -72,8 +72,8 @@
             android:id="@+id/rightWheelSpeedText"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:gravity="center"
             android:labelFor="@id/rightWheelSpeed"
             android:text="@{@string/rightwheelspeedformat(controllerModel.rightSpeed - 100)}"
@@ -84,9 +84,9 @@
             android:id="@+id/ikView2d"
             android:layout_width="400dp"
             android:layout_height="200dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:background="#FF0000"
             app:layout_constraintEnd_toStartOf="@+id/rightWheelSpeed"
             app:layout_constraintStart_toEndOf="@+id/leftWheelSpeed"
@@ -96,10 +96,10 @@
             android:id="@+id/serverOnlineButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.038"
@@ -112,12 +112,12 @@
             android:id="@+id/clampAngle"
             android:layout_width="164dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:max="50"
+            android:min="10"
             android:progress="@={controllerModel.clampAngle}"
-            android:max = "50"
-            android:min = "10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftWheelSpeed"
@@ -127,11 +127,25 @@
             android:id="@+id/clampAngleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="52dp"
             android:text="@string/clampAngle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/clampAngle" />
+
+        <SeekBar
+            android:id="@+id/mainplatform"
+            android:layout_width="194dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:max="180"
+            android:min="0"
+            android:progress="@={controllerModel.platformAngle}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ikView2d" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
