--- a/AndroidControl/app/src/main/res/layout/activity_main.xml
+++ b/AndroidControl/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,18 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/platformAngleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/platformAngle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mainplatform" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{controllerModel.msg}"
@@ -33,9 +45,8 @@
         <SeekBar
             android:id="@+id/leftWheelSpeed"
             android:layout_width="185dp"
-            android:layout_height="218dp"
+            android:layout_height="283dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:max="200"
             android:min="0"
             android:progress="@={controllerModel.leftSpeed}"
@@ -46,8 +57,7 @@
         <SeekBar
             android:id="@+id/rightWheelSpeed"
             android:layout_width="185dp"
-            android:layout_height="218dp"
-            android:layout_marginStart="8dp"
+            android:layout_height="283dp"
             android:layout_marginTop="8dp"
             android:max="200"
             android:min="0"
@@ -112,23 +122,24 @@
             android:id="@+id/clampAngle"
             android:layout_width="164dp"
             android:layout_height="49dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:max="50"
+            android:max="60"
             android:min="10"
             android:progress="@={controllerModel.clampAngle}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/leftWheelSpeed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mainplatform"
             app:layout_constraintVertical_bias="0.3" />
 
         <TextView
             android:id="@+id/clampAngleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="52dp"
+            android:layout_marginEnd="256dp"
             android:text="@string/clampAngle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/clampAngle" />
